--- a/public/style.css
+++ b/public/style.css
@@ -1,47 +1,26 @@
-.card {
-    width: 300px;
-    margin: auto;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card-image {
-    text-align: center;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  input {
-    margin-bottom: 10px;
-    padding: 8px;
+.accordion-card {
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    margin: 10px;
   }
   
-  .error {
-    color: red;
-    margin-bottom: 10px;
-  }
-  
-  .submit-btn {
-    background-color: #4caf50;
-    color: white;
+  .header {
+    background-color: #f1f1f1;
     padding: 10px;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   
-  .submit-btn:hover {
-    background-color: #45a049;
-  }
-  .heading
-  {
-     text-align: center;
+  .icon {
+    font-size: 18px;
   }
   
+  .card-info {
+    margin: 0;
+  }
   
+  /* Style for the active state */
+  .accordion-card.active .content {
+    display: block;
+  }
