--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,35 @@
-.container {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+}
+
+section {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 100vh;
-  transition: background-color 0.3s ease-in-out;
-  cursor: pointer;
 }
 
-input {
-  padding: 8px;
-  border: none;
-  border-radius: 4px;
+button {
+  font-size: 16px;
+  padding: 10px 20px;
+  cursor: pointer;
   outline: none;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
 
-.FaSearch {
-  cursor: pointer;
-  font-size: 1.5rem;
-  margin: 0 8px;
-  color: #333; /* Change the color as per your design */
+button:hover {
+  background-color: #ffa31a;
+  color: #1b1b1b;
+  border-color: #ffa31a;
+}
+
+.content {
+  text-align: center;
+  padding: 20px;
+}
+
+.heading {
+  color: #1b1b1b;
 }
